--- a/index.html
+++ b/index.html
@@ -35,17 +35,17 @@
             <div class="large-12 columns">
                 <a href="http://www.thoughtworks.com" target="_blank"
                    onclick="ga('send', 'event', 'tw', 'tw')">
-                    <img src="./img/tw-logo-white.png" alt="ThoughtWorks" align="center" />
+                    <img src="./img/tw-logo-white-2022.png" alt="ThoughtWorks" align="center" />
                 </a>
-                <h1 style="color:white;">Converge 2020, Bengaluru</h1>
+                <h1 style="color:white;">Converge 2022, Bengaluru</h1>
                 <p style="color:white;opacity:0.8;font-size:0.90em">Converge aims to bring together ideators, designers, analysts, solution providers, and technologists to connect, collaborate and learn from each other.</p>
             </div>
         </div>
 
         <div class="row countdown columns large-centered">
             <div class="small-4 large-4 columns date">
-                <p style="color:white;">6<sup>th</sup> edition</p>
-                <h4>Dec. 5<sup>th</sup></h4>
+                <p style="color:white;">7<sup>th</sup> edition</p>
+                <h4>25<sup>th</sup> - 26<sup>th</sup> March</h4>
             </div>
             <div class="small-4 large-4 columns counter">
                 <p style="color:white;">Days</p>
@@ -89,7 +89,7 @@
         <div class="large-12 columns social">
             <a rel="nofollow" href="https://www.facebook.com/ThoughtWorks/" target="_blank"><i class="icon-facebook-2" title="ThoughtWorks Facebook" onclick="ga('send', 'event', 'social', 'facebook')"></i></a>
             <a rel="nofollow" href="https://www.linkedin.com/company/thoughtworks/" target="_blank"><i class="icon-linkedin-2" title="ThoughtWorks LinkedIn" onclick="ga('send', 'event', 'social', 'LinkedIn')"></i></a>
-            <a rel="nofollow" href="https://twitter.com/TW_IndiaEdition" target="_blank" title="ThoughtWorks Twitter" onclick="ga('send', 'event', 'social', 'twitter')"><i class="icon-twitter-2"></i></a>
+            <a rel="nofollow" href="https://twitter.com/thoughtworksIN" target="_blank" title="ThoughtWorks Twitter" onclick="ga('send', 'event', 'social', 'twitter')"><i class="icon-twitter-2"></i></a>
             <a rel="nofollow" href="mailto:converge-bangalore@thoughtworks.com" title="Email us" onclick="ga('send', 'event', 'social', 'email')"><i class="icon-mail"></i></a>
             <!-- NOTE: Last video link is line-wrapping in small screens like iOS a rel="nofollow" href="#" title="Videos (coming soon)"><i class="icon-youtube"></i></a -->
         </div>
@@ -97,29 +97,18 @@
 
     <div class="row">
 
-        <h4>Reimagine Entire Ecosystems with Digital Platforms</h4>
+        <h4>XaaS - Anything as a Service</h4>
         <br>
         <p id="_about" data--100-bottom-top="transform:perspective(400px) rotateX(90deg) scale(.5);transform-origin:50% 0" data--100-bottom="transform:perspective(400px) rotateX(0deg) scale(1)">
-            Over the past decade we have seen tremendous efforts being made to enhance the digital capabilities of several industries such as Retail, Finance and Travel etc.
+            XaaS - an acronym for Anything as a Service, a term widely used to categorize products, tools and other services. In the 7th edition of Converge we will focus on how XaaS is an alternative for everything, and how it has been adopted by organizations and technologists.
         </p>
         <br>
-        <p>
-            The advancements made in these industries have presented opportunities for digital transformation of the businesses and paved a way for innovation and collaboration.
-        </p>
-        <br>
-        <p>
-            This year's edition of Converge shall focus on how the industries that are falling behind can embrace horizontal digital platforms to redefine their business strategies and fuel growth.
-        </p>
-        <br>
-        <p>
-            It's imperative to 'Reimagine Entire Ecosystems with Digital Platforms' not just as a competitive necessity but for new value creation.
-        </p>
-        <br>
-        <a href="#registration" class="link"><i>Don't forget to register for the first virtual Converge happening on Saturday, 5th Dec'20!</a>
+        <a href="#registration" class="link"><i>Don't forget to register for virtual Converge happening on Friday, 25th March 2022!</a>
         <br><br>
         <div>
-            <a href="https://docs.google.com/forms/d/e/1FAIpQLSdP1C8BdyHxEgPnmE8XuHCxR-Kw8KeHB7PB5RlzrmVoKWOnxg/viewform?usp=sf_link"  target="_blank" >
-                <button class="button" > Register now</button>
+            <!-- <a href="https://docs.google.com/forms/d/e/1FAIpQLSdP1C8BdyHxEgPnmE8XuHCxR-Kw8KeHB7PB5RlzrmVoKWOnxg/viewform?usp=sf_link"  target="_blank" >
+                <button class="button" > Register now</button> -->
+                <a href=""><button class="button" > Register now</button>
             </a>
         </div>
         <br/>
@@ -128,9 +117,11 @@
     </div>
 
 </section>
-
-<section id="agenda" class="feature">
-    <div class="row" data-bottom="transform:translateY(-10em)" data--100-bottom="transform:translateY(0em)">
+<section style="background: #f06819; min-height: 50%; text-align: center;"> 
+    <h5 style="padding: 10%;">Agenda and Speaker details will be added soon</h5>
+</section>
+<!-- <section id="agenda" class="feature">
+    <div class="row" data-bottom="transform:translateY(-10em)" data--100-bottom="transform:translateY(0em)"> 
         <h2>Agenda</h2>
     </div>
 
@@ -349,16 +340,17 @@
                  data--200-bottom="transform:rotateX(0) scale(1);opacity:1">
                 <p>Networking</p>
             </div>
-        </div> -->
+        </div>
     </div>
-    </div>
+    </div>-->
 </section>
 
-<section id="speaker_list" class="speakerList" >
+<!--<section id="speaker_list" class="speakerList" >
     <div class="header">
         <h2>Speakers</h2>
     </div>
-    <div class="speakers-list-item speakers-list-item-initial"> 
+    <h5>Coming soon</h5>
+     <div class="speakers-list-item speakers-list-item-initial">  
         <img src="./img/2020/kiran.jpg" />
          <div class="speakers-list-description">
             <h6>Kiran Anandampillai</h6>
@@ -439,7 +431,7 @@
             <p>ThoughtWorks</p>
         </div>
     </div>
-   </div>
+   </div>-->
 </section>
 
 
@@ -546,6 +538,13 @@
                         <div class="year">Aug</div>
                     </a>
                 </li>
+                <li>
+                    <a href="./dec2020.html" target="_blank" data-bottom="transform:rotateZ(180deg) rotateY(90deg) scale(0);opacity:0;transform-origin:50% 0" data--150-bottom="transform:rotateZ(0deg) rotateY(0) scale(1);opacity:1">
+                        <div class="month">2020</div>
+                        <div class="day">5</div>
+                        <div class="year">Dec</div>
+                    </a>
+                </li>
 
             </ul>
         </div>
@@ -557,13 +556,13 @@
         <div class="large-12 columns">
             <p><small>
                 <a href=".">Converge Bangalore</a> sponsored by
-                <a rel="nofollow" target="_blank" href="//thoughtworks.com">ThoughtWorks</a><br />
+                <a rel="nofollow" target="_blank" href="//thoughtworks.com">Thoughtworks</a><br />
             </small></p>
         </div>
     </div>
 </footer>
 
-<script>window.targetDate = new Date("December 5 2020")</script>
+<script>window.targetDate = new Date("March 25 2022")</script>
 <script src="js/ticker.js"></script>
 
 
