--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta property="og:image" content="http://thoughtworks-bangalore.github.io/Converge/img/banner.jpg"/>
-    <title>Converge Bangalore - December 2020</title>
+    <title>Converge Bangalore - March 2022</title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="shortcut icon" type="image/x-icon" href="./favicon1.ico" />
@@ -35,7 +35,7 @@
             <div class="large-12 columns">
                 <a href="http://www.thoughtworks.com" target="_blank"
                    onclick="ga('send', 'event', 'tw', 'tw')">
-                    <img src="./img/tw-logo-white-2022.png" alt="ThoughtWorks" align="center" />
+                    <img src="./img/tw-logo-white-2022.png" alt="Thoughtworks" align="center" />
                 </a>
                 <h1 style="color:white;">Converge 2022, Bengaluru</h1>
                 <p style="color:white;opacity:0.8;font-size:0.90em">Converge aims to bring together ideators, designers, analysts, solution providers, and technologists to connect, collaborate and learn from each other.</p>
@@ -87,9 +87,9 @@
     <div class="row"
          data-bottom="transform:translateY(-5em)" data--100-bottom="transform:translateY(0)">
         <div class="large-12 columns social">
-            <a rel="nofollow" href="https://www.facebook.com/ThoughtWorks/" target="_blank"><i class="icon-facebook-2" title="ThoughtWorks Facebook" onclick="ga('send', 'event', 'social', 'facebook')"></i></a>
-            <a rel="nofollow" href="https://www.linkedin.com/company/thoughtworks/" target="_blank"><i class="icon-linkedin-2" title="ThoughtWorks LinkedIn" onclick="ga('send', 'event', 'social', 'LinkedIn')"></i></a>
-            <a rel="nofollow" href="https://twitter.com/thoughtworksIN" target="_blank" title="ThoughtWorks Twitter" onclick="ga('send', 'event', 'social', 'twitter')"><i class="icon-twitter-2"></i></a>
+            <a rel="nofollow" href="https://www.facebook.com/ThoughtWorks/" target="_blank"><i class="icon-facebook-2" title="Thoughtworks Facebook" onclick="ga('send', 'event', 'social', 'facebook')"></i></a>
+            <a rel="nofollow" href="https://www.linkedin.com/company/thoughtworks/" target="_blank"><i class="icon-linkedin-2" title="Thoughtworks LinkedIn" onclick="ga('send', 'event', 'social', 'LinkedIn')"></i></a>
+            <a rel="nofollow" href="https://twitter.com/thoughtworksIN" target="_blank" title="Thoughtworks Twitter" onclick="ga('send', 'event', 'social', 'twitter')"><i class="icon-twitter-2"></i></a>
             <a rel="nofollow" href="mailto:converge-bangalore@thoughtworks.com" title="Email us" onclick="ga('send', 'event', 'social', 'email')"><i class="icon-mail"></i></a>
             <!-- NOTE: Last video link is line-wrapping in small screens like iOS a rel="nofollow" href="#" title="Videos (coming soon)"><i class="icon-youtube"></i></a -->
         </div>
@@ -232,7 +232,7 @@
             <div class="large-8 columns summary" data-anchor-target="#agenda-5"
                  data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
                  data--200-bottom="transform:rotateX(0) scale(1);opacity:1">
-                <p>The art of the possible with ThoughtWorks' Digital Platform<br><i><font size="4">Anumeha Verma, Kavitha T</i></font></p></p>
+                <p>The art of the possible with Thoughtworks' Digital Platform<br><i><font size="4">Anumeha Verma, Kavitha T</i></font></p></p>
             </div>
         </div>
 
@@ -292,7 +292,7 @@
             <div class="large-8 columns summary" data-anchor-target="#agenda-5"
                  data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
                  data--200-bottom="transform:rotateX(0) scale(1);opacity:1">
-                <p>Applying AI in Hyper-personalisation<br><i><font size="4">Sabitha Rajat (Business Analyst, ThoughtWorks)</i></font></p></p>
+                <p>Applying AI in Hyper-personalisation<br><i><font size="4">Sabitha Rajat (Business Analyst, Thoughtworks)</i></font></p></p>
             </div>
         </div>
 
@@ -322,7 +322,7 @@
             <div class="large-8 columns summary" data-anchor-target="#agenda-5"
                  data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
                  data--200-bottom="transform:rotateX(0) scale(1);opacity:1">
-                <p>Workshop: Innovation in Product Thinking<br><i><font size="4">Priya Lakhe & Priya Malhotra (Business Analysts, ThoughtWorks)</i></font>
+                <p>Workshop: Innovation in Product Thinking<br><i><font size="4">Priya Lakhe & Priya Malhotra (Business Analysts, Thoughtworks)</i></font>
                     <small>On-spot registration (limited seats)</small></p></p>
             </div>
         </div>
@@ -369,7 +369,7 @@
            <div class="speakers-list-description">
                <h6>Anirvan Lahiri</h6>
                <p>Product Manager</p>
-                <p>ThoughtWorks</p>
+                <p>Thoughtworks</p>
 
            </div>
        </div>
@@ -377,7 +377,7 @@
            <div class="speakers-list-description">
                <h6>Anumeha Verma</h6>
                <p>Data Strategist - Digital Platform</p>
-                <p>ThoughtWorks</p>
+                <p>Thoughtworks</p>
 
            </div>
        </div>
@@ -392,14 +392,14 @@
            <div class="speakers-list-description">
                <h6>Dinker Charak</h6>
                <p>Product Manager</p>
-                <p>ThoughtWorks</p>
+                <p>Thoughtworks</p>
            </div>
        </div>
        <div class="speakers-list-item"><img src="./img/2020/kavitha.jpg" />
            <div class="speakers-list-description">
                <h6>Kavitha Thyagarajan</h6>
                <p>Design lead - Digital Platform</p>
-                <p>ThoughtWorks</p>
+                <p>Thoughtworks</p>
 
            </div>
        </div>
@@ -407,7 +407,7 @@
         <div class="speakers-list-description">
             <h6>Mujiruddin Shaikh</h6>
             <p>Market Tech Principal</p>
-            <p>ThoughtWorks</p>
+            <p>Thoughtworks</p>
         </div>
     </div>
     <div class="speakers-list-item"><img src="./img/2020/renu.jpg" />
@@ -428,7 +428,7 @@
         <div class="speakers-list-description">
             <h6>Visalakshi Subramaniam</h6>
             <p>Global Head Retail</p>
-            <p>ThoughtWorks</p>
+            <p>Thoughtworks</p>
         </div>
     </div>
    </div>-->
@@ -439,13 +439,13 @@
     <div class="fixed">
         <nav class="top-bar">
             <ul class="title-area">
-                <li class="name"><h1><a href="./">Converge Bangalore &raquo; <span>December</span></a></h1></li>
+                <li class="name"><h1><a href="./">Converge Bangalore &raquo; <span>March</span></a></h1></li>
                 <li class="toggle-topbar menu-icon"><a href="#"></a></li>
             </ul>
             <section class="top-bar-section">
                 <ul class="left">
                     <li><a href="http://www.thoughtworks.com" target="_blank"
-                           onclick="ga('send', 'event', 'tw', 'tw')">ThoughtWorks</a>
+                           onclick="ga('send', 'event', 'tw', 'tw')">Thoughtworks</a>
                     </li>
                 </ul>
                 <ul class="right">
@@ -477,7 +477,7 @@
     <div class="row">
         <div class="large-5 columns address" data--100-bottom-top="transform:translateX(-100%)" data--100-bottom="transform:translateX(0)">
             <p>
-                <span>ThoughtWorks Technologies (India) Pvt. Ltd.</span>
+                <span>Thoughtworks Technologies (India) Pvt. Ltd.</span>
                 <span>ACR Mansion G + 3floors 147/F, </span>
                 <span>8th Main,3<sup>rd</sup>Block Koramangala </span>
                 <span>Bangalore-560034 </span>
