--- a/index.html
+++ b/index.html
@@ -54,9 +54,7 @@
         </div>
 
         <div class="row actions">
-            <!-- <p>Registrations opening soon.</p> -->
-
-                <div class="large-5 columns speaker-list">
+                <!-- <div class="large-5 columns speaker-list">
 
                         <a href="#agenda"  rel="nofollow"
                                onclick="ga('send', 'event', 'speaker_list', 'speaker_list')">
@@ -68,7 +66,7 @@
                         <a href="#speaker_list"  rel="nofollow">
                             <h4>Speakers</h4>
                         </a>
-                </div>
+                </div> -->
 
 
 
@@ -450,8 +448,8 @@
                 </ul>
                 <ul class="right">
                     <li><a href="#about">About</a></li>
-                    <li><a href="#agenda">Agenda</a></li>
-                    <li> <a href="#speaker_list"  rel="nofollow">Speakers</a> </li>
+                    <!-- <li><a href="#agenda">Agenda</a></li>
+                    <li> <a href="#speaker_list"  rel="nofollow">Speakers</a> </li> -->
                     <li> <a href="https://docs.google.com/forms/d/e/1FAIpQLSdP1C8BdyHxEgPnmE8XuHCxR-Kw8KeHB7PB5RlzrmVoKWOnxg/viewform?usp=sf_link"  target="_blank" rel="nofollow">Registration</a> </li>
 
                     <!-- <li><a href="#location">Location</a></li> -->
