#[Rikkashini/Twinkle] Removed Registration form link

--- a/index.html
+++ b/index.html
@@ -450,7 +450,8 @@
                     <li><a href="#about">About</a></li>
                     <!-- <li><a href="#agenda">Agenda</a></li>
                     <li> <a href="#speaker_list"  rel="nofollow">Speakers</a> </li> -->
-                    <li> <a href="https://docs.google.com/forms/d/e/1FAIpQLSdP1C8BdyHxEgPnmE8XuHCxR-Kw8KeHB7PB5RlzrmVoKWOnxg/viewform?usp=sf_link"  target="_blank" rel="nofollow">Registration</a> </li>
+                    <!-- <li> <a href="https://docs.google.com/forms/d/e/1FAIpQLSdP1C8BdyHxEgPnmE8XuHCxR-Kw8KeHB7PB5RlzrmVoKWOnxg/viewform?usp=sf_link"  target="_blank" rel="nofollow">Registration</a> </li> -->
+                    <li> <a href="" rel="nofollow">Registration</a> </li>
 
                     <!-- <li><a href="#location">Location</a></li> -->
                     <li><a href="#archive">Previous Editions</a></li>
