--- a/mar2022.html
+++ b/mar2022.html
@@ -6,7 +6,7 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta property="og:image" content="http://thoughtworks-bangalore.github.io/Converge/img/banner.jpg"/>
+    <meta property="og:image" content="http://thoughtworks-bangalore.github.io/Converge/img/banner-white.png"/>
     <title>Converge Bangalore - March 2022</title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -16,7 +16,7 @@
 
     <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 
-    <link rel="stylesheet" href="css/app.css" />
+    <link rel="stylesheet" href="css/app-2022.css" />
     <link rel="stylesheet" href="css/icons/fontello.css" />
     <!--[if IE 7]>
         <link rel="stylesheet" href="css/icons/fontello-ie7.css" />
@@ -35,20 +35,20 @@
             <div class="large-12 columns">
                 <a href="http://www.thoughtworks.com" target="_blank"
                    onclick="ga('send', 'event', 'tw', 'tw')">
-                    <img src="./img/tw-logo-white-2022.png" alt="Thoughtworks" align="center" />
+                    <img src="./img/tw-logo-2022.png" alt="Thoughtworks" align="center" />
                 </a>
-                <h1 style="color:white;">Converge 2022, Bengaluru</h1>
-                <p style="color:white;opacity:0.8;font-size:0.90em">Converge aims to bring together ideators, designers, analysts, solution providers, and technologists to connect, collaborate and learn from each other.</p>
+                <h1>Converge 2022, Bengaluru</h1>
+                <p style="opacity:0.8;font-size:0.90em">Converge aims to bring together ideators, designers, analysts, solution providers, and technologists to connect, collaborate and learn from each other.</p>
             </div>
         </div>
 
         <div class="row countdown columns large-centered">
             <div class="small-4 large-4 columns date">
-                <p style="color:white;">7<sup>th</sup> edition</p>
+                <p>7<sup>th</sup> edition</p>
                 <h6>25<sup>th</sup> - 26<sup>th</sup> March</h6 >
             </div>
             <div class="small-4 large-4 columns counter">
-                <p style="color:white;">Days</p>
+                <p>Days</p>
                 <h6 class="couter-border-top"><span id="days">&nbsp;</span></h6>
             </div>
         </div>
