[Rikkashini/Twinkle] Change styles for previous editions, coming soon  sections of 2022 edition page

--- a/mar2022.html
+++ b/mar2022.html
@@ -115,7 +115,7 @@
     </div>
 
 </section>
-<section style="background: #f06819; min-height: 50%; text-align: center;"> 
+<section style="background: #00AEEF; min-height: 50%; text-align: center;">
     <h5 style="padding: 10%;">Agenda and Speaker details will be added soon</h5>
 </section>
 <!-- <section id="agenda" class="feature">
